Fix logo dark mode

--- a/assets/scss/blocks/nova-blocks/header/_editor.scss
+++ b/assets/scss/blocks/nova-blocks/header/_editor.scss
@@ -23,3 +23,13 @@
 .c-logo__inverted {
   opacity: 0;
 }
+
+.is-dark-theme {
+  .c-logo__default {
+    opacity: 0;
+  }
+
+  .c-logo__inverted {
+    opacity: 1;
+  }
+}
