--- a/editor.css
+++ b/editor.css
@@ -1351,6 +1351,10 @@
     display: flex; }
   .editor-styles-wrapper .c-logo__inverted {
     opacity: 0; }
+  .editor-styles-wrapper .is-dark-theme .c-logo__default {
+    opacity: 0; }
+  .editor-styles-wrapper .is-dark-theme .c-logo__inverted {
+    opacity: 1; }
   .editor-styles-wrapper .novablocks-slideshow__arrow {
     background-color: transparent;
     width: 50px;
